k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rideapp
  namespace: rideapp
  labels:
    app: rideapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rideapp
  template:
    metadata:
      labels:
        app: rideapp
    spec:
      containers:
        - name: rideapp
          image: rideapp:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
