k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rideapp-service
  namespace: rideapp
spec:
  type: NodePort
  selector:
    app: rideapp
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
