k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rideapp-ingress
  namespace: rideapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rideapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rideapp-service
                port:
                  number: 3000
